# T-Rex-Runner

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: TRexGame.h  TRexGame.hpp  background_manager.h  background_manager.hpp  cloud.h  cloud.hpp  collision_detector.h  collision_detector.hpp  dinosaur.h  dinosaur.hpp  external_controller.h  external_controller.hpp  game_env.h  game_env.hpp  game_object.h  game_object.hpp  input.h  input.hpp  objects_manager.h  objects_manager.hpp  obstacle_manager.h  obstacle_manager.hpp  renderer.h  renderer.hpp  road.h  road.hpp  sdl_input.h  sdl_renderer.h  sdl_renderer.hpp  tree.h  tree.hpp  utility.h  utility.hpp
src/: TRexGame.cpp  background_manager.cpp  cloud.cpp  collision_detector.cpp  dinosaur.cpp  external_controller.cpp  game_env.cpp  game_object.cpp  input.cpp  main.cpp  objects_manager.cpp  obstacle_manager.cpp  renderer.cpp  road.cpp  sdl_input.cpp  sdl_renderer.cpp  tree.cpp  utility.cpp
